# receipt-ocr

./: .gitignore  LICENSE  README.md  docker-compose.yml  openapi.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  test_ocr.py  test_rembg.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: receipt.py  user.py
backend/app/routers/: auth.py  ocr.py  receipts.py  summary.py
backend/app/schemas/: auth.py  receipt.py  summary.py
backend/app/services/: ocr_service.py
db/: .env.example  README.md  package-lock.json  package.json  prisma.config.ts
db/prisma/: schema.prisma
db/prisma/migrations/20260609015619_v1/: migration.sql
frontend/: package-lock.json  package.json  vite.config.ts
frontend/api/: ocr.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/lib/: api.ts  auth.ts  storage.ts
frontend/src/pages/: CalendarPage.tsx  Dashboard.tsx  Expenses.tsx  LoginPage.tsx  ReceiptConfirmPage.tsx  Scan.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
supabase/migrations/: 20260610_add_tax.sql  20260610_init.sql  20260613_storage.sql
