[project]
name = "receipt-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.136.3",
    "paddleocr>=3.6.0",
    "paddlepaddle>=3.3.1",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.32",
    "rembg[cpu]>=2.0.76",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn>=0.49.0",
]
